syntax = "proto3";

option go_package = "pb/user";

import "pb/user/user.proto";

message UserFindRequest {
    sint64 sort = 1;
    sint64 page = 2;
    sint64 per_page = 3;
    string status = 4;
    string search = 5;
}

message UserFind {
    repeated User users = 1;
    int64 rows = 2;
    int64 pages = 3;
    int64 per_page = 4;
    int64 total = 5;
}

message UserFindResponse {
    bool is_empty = 1;
    UserFind payload = 2;
}